# AI-ML-AGENTIC-SYSTEMS

./: README.md
eta-predictor/: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
eta-predictor/app/: main.py  predictor.py  schemas.py
eta-predictor/scripts/: generate_data.py  train.py
eta-predictor/tests/: path_bootstrap.py  test_api.py  test_schemas.py
