[project]
name = "eta-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [{include = "eta_predictor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.8.0"
pandas = "^2.0"
numpy = "^2.4.4"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
pydantic = "^2.13.3"
joblib = "^1.5.3"
mlflow = "^3.11.1"
pytest = "^9.0.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
